--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 				font-size: 15px;
 			}
 		</style>
-		<title>Плаксин</title>
+		<title>Рубежный контроль</title>
 	</head>
 	<body id="app">
 		<section class="chunk">
