--- a/index.html
+++ b/index.html
@@ -634,12 +634,14 @@
 
 			img {
 				max-width: 100%;
+				padding-bottom: 5px;
 			}
 
 			.title {
 				font-size: 15px;
 				font-weight: bold;
 				color: #db6400;
+				padding-right: 10px;
 			}
 
 			.task {
@@ -654,6 +656,12 @@
 
 			.solve {
 				font-size: 15px;
+				display: flex;
+			}
+
+			.container {
+				background-color: #292929;
+				padding: 0px 10px 0px 10px;
 			}
 		</style>
 		<title>Рубежный контроль</title>
@@ -669,6 +677,17 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ:</span>
+					<div class="container">
+						<p>
+							Электрическая проницаемость - это физическая величина, которая
+							характеризует способность среды или материала пропускать
+							электрическое поле
+						</p>
+						<p>
+							Электрический заряд - источник электрического поля, через которое
+							заряды взаимодействуют друг с другом.
+						</p>
+					</div>
 				</div>
 				<br />
 				<div class="task">
@@ -677,6 +696,22 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Амплитуда обычно относится к максимальному значению величины
+							переменного сигнала, такого как напряжение или ток, отклоняющегося
+							от некоторой базовой точки или нулевого уровня.
+						</p>
+						<p>
+							Входная цепь - электрическая цепь предназначенная для
+							предварительной обработки сигнала или приема этого сигнала. С
+							помощью его обычно фильтруют полезный сигнал от помех.
+						</p>
+						<p>
+							Напряжение - разность потенциалов между двумя разными точками
+							цепи.
+						</p>
+					</div>
 				</div>
 				<br />
 				<div class="task">
@@ -685,6 +720,7 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">...</div>
 				</div>
 				<br />
 				<div class="task" style="margin: 0px">
@@ -693,6 +729,28 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Постоянный ток - электрический ток, не изменяющийся по амплитуде и
+							по знаку в течение продолжительного времени.
+						</p>
+						<p>
+							Источником постоянного тока являются обычные гальванические
+							элементы - батарейки, аккумуляторы, а также генераторы постоянного
+							тока.
+						</p>
+						<br />
+						<p>
+							Переменный ток - электрический ток, изменяющийся по амплитуде и по
+							знаку с определенным периодом Т (частом f). Обычно переменным
+							током называют синусоидальный ток.
+						</p>
+						<p>
+							Источниками переменного тока являются различные генераторы
+							переменного тока, а также преобразователи постоянного тока в
+							переменный
+						</p>
+					</div>
 				</div>
 			</div>
 			<div class="practice">
@@ -708,28 +766,30 @@
 				/>
 				<div class="solve">
 					<span class="title">Ответ: </span>
-					<p>
-						Изображен генератор с фазосдвигающей цепью - по сути обычный
-						усилитель с фазосдвигающей RC-цепью обратной связи.
-					</p>
-					<p>
-						Коллекторное сопротивление R4 нужен чтобы у транзистора была
-						нагрузка (чтоб не открывался прям на землю) А три RC-цепочки
-						выступают в роли обратной связи, каждая из них поворачивает сигнал
-						на 60 градусов => сигналы на коллекторе и базе находятся в
-						противофазе.
-					</p>
-					<p>
-						Начальный сигнал берется с самого транзистора - хаотичные токи и
-						шумы и т.д. И один из этих сигналов попадает под условия
-						самовозбуждения, а другие просто глушат сами себя.
-					</p>
-					<a
-						href="https://studfile.net/preview/1815645/page:3/"
-						target="_blank"
-					>
-						ссылка на материал</a
-					>
+					<div class="container">
+						<p>
+							Изображен генератор с фазосдвигающей цепью - по сути обычный
+							усилитель с фазосдвигающей RC-цепью обратной связи.
+						</p>
+						<p>
+							Коллекторное сопротивление R4 нужен чтобы у транзистора была
+							нагрузка (чтоб не открывался прям на землю) А три RC-цепочки
+							выступают в роли обратной связи, каждая из них поворачивает сигнал
+							на 60 градусов => сигналы на коллекторе и базе находятся в
+							противофазе.
+						</p>
+						<p>
+							Начальный сигнал берется с самого транзистора - хаотичные токи и
+							шумы и т.д. И один из этих сигналов попадает под условия
+							самовозбуждения, а другие просто глушат сами себя.
+						</p>
+						<a
+							href="https://studfile.net/preview/1815645/page:3/"
+							target="_blank"
+						>
+							ссылка на материал</a
+						>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -742,6 +802,7 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">...</div>
 				</div>
 				<br />
 				<div class="task">
@@ -751,6 +812,36 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Активные элементы - относятся источники электрической энергии:
+							генераторы, аккумуляторы и гальванические элементы.
+						</p>
+						<p>
+							Пассивные элементы - резистор, индуктивный элемент, емкостный
+							элемент и идеальный трансформатор.
+						</p>
+						<p>
+							Резистор - элемент электрической цепи, используемый как
+							сопротивление. Его называют активным сопротивлением, а мощность,
+							рассеиваемую им, - активной мощностью.
+						</p>
+						<p>
+							Индуктивный элемент - элемент, в котором энергия электрического
+							поля преобразуется в энергию электрического поля преобразуется в
+							энергию магнитного поля.
+						</p>
+						<p>
+							Емкостный элемент - элемент электрической цепи, способный
+							накапливать электрические заряды. Емкость - скалярная величина,
+							равного отношению заряда q конденсатора к напряжению U между его
+							электродами (пластинами)
+						</p>
+						<p>
+							Идеальный трансформатор - пассивный четырехполюсник, который
+							передает электрическую энергию между обмотками.
+						</p>
+					</div>
 				</div>
 				<br />
 				<div class="task">
@@ -759,14 +850,45 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Электрическое сопротивление - это мера того, насколько материал
+							затрудняет прохождение электрического тока. Оно измеряется в омах
+							(Ω).
+						</p>
+						<p>
+							Электрическая проводимость - это мера способности материала
+							проводить электрический ток. Она обратно пропорциональна
+							сопротивлению и измеряется в сименсах (S).
+						</p>
+					</div>
 				</div>
 				<br />
 				<div class="task" style="margin: 0px">
 					<span class="no">4.</span>
-					Раскройте сущность понятий: электрическая цепь,элементы цепи
+					Раскройте сущность понятий: электрическая цепь, элементы цепи
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Электрическая цепь - совокупность соединении между собой
+							источников, потребителей и преобразователей (обычно рассматривают
+							как принципиальную схему).
+						</p>
+						<p>
+							Электрическая схема - изображение электрической цепи с помощью
+							условных обозначений
+						</p>
+						<p>
+							Узел - место в котором в непосредственном контакте находятся три и
+							более элементов цепи.
+						</p>
+						<p>
+							Ветвь - если цепь имеет более одного узла, то элемент или группа
+							последовательно соединенных между двумя узлами.
+						</p>
+					</div>
 				</div>
 				<br />
 			</div>
@@ -783,6 +905,23 @@
 				/>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Данная схема состоит из двух двухтактных каскадов (один из которых
+							отвечает за правый канал, а второй за левый). Преимущество
+							двухтактного каскада в том что он может формировать как
+							положительные волны так и отрицательные на выходе.
+						</p>
+						<p>
+							Сигналы со штеккера поступают на для конденсатора обеспечивающих
+							гальваническую развязку. Дальше эти сигналы усиливаются этими
+							каскадами.
+						</p>
+						<p>
+							два диода нужны для обеспечения стабилизации режима работы
+							транзисторов (то есть формируют ток смещения)
+						</p>
+					</div>
 				</div>
 				<br />
 			</div>
@@ -796,6 +935,11 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						Изменение силы тока нужна для настройки схемы или для лбп. Силу тока
+						можно изменять при помощи изменения параметров источника питания или
+						сопротивления или производить регулировку при помощи транзистора.
+					</div>
 				</div>
 				<br />
 				<div class="task">
@@ -804,6 +948,12 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Сила тока на участке цепи равен напряжению на этом участке
+							деленного на сопротивление этого участка.
+						</p>
+					</div>
 				</div>
 				<br />
 				<div class="task">
@@ -813,6 +963,13 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						При последовательном соединении между приемниками течет один и тот
+						же ток. Возможность подбирать необходимое напряжение для каждого
+						приемника или использовать эти напряжения как опорные в различных
+						схемах, то есть напряжение делиться между потребителями в
+						соответствии с их сопротивлением.
+					</div>
 				</div>
 				<br />
 				<div class="task" style="margin: 0px">
@@ -821,6 +978,19 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Помехи возникают еще на стадии формирования сигнала, так как
+							каждый элемент не может быть идеальным. Несмотря на то, что есть
+							специальные блоки, которые предназначены для исправления этих
+							помех, но они не полностью избавляют от этого.
+						</p>
+						<p>Также помехи возникают в приемнике по таким же причинам.</p>
+						<p>
+							И также возникают помехи во время передачи сигнала, так как на
+							него влияют внешние условия.
+						</p>
+					</div>
 				</div>
 				<br />
 			</div>
@@ -837,40 +1007,42 @@
 				/>
 				<div class="solve">
 					<span class="title">Ответ: </span>
-					<p>
-						На данной схеме есть высоковольтная часть, а также низковольтная
-						(разделяются так как первичная обмотка трансформатора не связана со
-						вторичной).
-					</p>
-					<p>
-						В низковольтной части есть три секции: выпрямитель (диодный мост),
-						фильтр (конденсатор), стабилизатор напряжения. <br />
-					</p>
-					<p>
-						Вторичная обмотка подключается к диодной сборке для выпрямления
-						напряжения, а дальше это выпрямленное напряжение поступает на
-						конденсатор для фильтрации.
-					</p>
-					<p>
-						Дальше идет последовательный стабилизатор напряжения.
+					<div class="container">
+						<p>
+							На данной схеме есть высоковольтная часть, а также низковольтная
+							(разделяются так как первичная обмотка трансформатора не связана
+							со вторичной).
+						</p>
+						<p>
+							В низковольтной части есть три секции: выпрямитель (диодный мост),
+							фильтр (конденсатор), стабилизатор напряжения. <br />
+						</p>
+						<p>
+							Вторичная обмотка подключается к диодной сборке для выпрямления
+							напряжения, а дальше это выпрямленное напряжение поступает на
+							конденсатор для фильтрации.
+						</p>
+						<p>
+							Дальше идет последовательный стабилизатор напряжения.
+							<br />
+							Сборка из резистора и стабилитрона служат в качестве источника
+							опорного напряжения. Стабилитрон стабилизирует напряжение, а
+							резистор ограничивает протекающий ток через стабилитрон и
+							позволяет ему быть в режиме пробоя. А биполярный транзистор
+							усиливает максимальный ток в схеме, так как стабилитрон не может
+							работать с большими токами
+						</p>
+						<a href="https://studfile.net/preview/9439343/" target="_blank">
+							ссылка на материал</a
+						>
 						<br />
-						Сборка из резистора и стабилитрона служат в качестве источника
-						опорного напряжения. Стабилитрон стабилизирует напряжение, а
-						резистор ограничивает протекающий ток через стабилитрон и позволяет
-						ему быть в режиме пробоя. А биполярный транзистор усиливает
-						максимальный ток в схеме, так как стабилитрон не может работать с
-						большими токами
-					</p>
-					<a href="https://studfile.net/preview/9439343/" target="_blank">
-						ссылка на материал</a
-					>
-					<br />
-					<a
-						href="https://studfile.net/preview/9392630/page:2/"
-						target="_blank"
-					>
-						ссылка на материал</a
-					>
+						<a
+							href="https://studfile.net/preview/9392630/page:2/"
+							target="_blank"
+						>
+							ссылка на материал</a
+						>
+					</div>
 				</div>
 				<br />
 			</div>
@@ -885,6 +1057,14 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Одно и тоже напряжение на всех приемниках. Возможность
+							контролировать силу тока в каждой ветви. А также параллельное
+							соединение позволяет подключать большое количество приемников
+							(главно чтоб сила тока была достаточной для приемника)
+						</p>
+					</div>
 				</div>
 				<br />
 				<div class="task">
@@ -893,6 +1073,9 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>...</p>
+					</div>
 				</div>
 				<br />
 				<div class="task">
@@ -902,6 +1085,20 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Электрическая емкость проводников - способность проводника
+							накапливать электрический заряд, то есть создавать разницу в
+							потенциалах.
+						</p>
+						<p>
+							Конденсатор - элемент представляющий собой две пластины способные
+							накапливать электрический заряд и диэлектрик между этими
+							пластинами. При подаче напряжения на обкладках возникает разница
+							потенциалов, а при прекращении подачи, конденсатор выступает в
+							роли кратковременного источника питания.
+						</p>
+					</div>
 				</div>
 				<br />
 				<div class="task" style="margin: 0px">
@@ -910,6 +1107,30 @@
 				</div>
 				<div class="solve">
 					<span class="title">Ответ: </span>
+					<div class="container">
+						<p>
+							Автогенератор - устройство, преобразующее энергию электрического
+							тока в энергию электрических колебании.
+						</p>
+						<p>
+							Основными характеристиками являются: частота, амплитуда, форма
+							сигнала.
+						</p>
+						<p>
+							Различают генераторы гармонических колебаний и генераторы
+							негармонических колебаний.
+						</p>
+						<p>
+							Автогенераторы - генератор, работающий в режиме автоколебаний, а
+							также есть генераторы, работающие от запуска внешними импульсами
+						</p>
+						<p>А также в каждом автогенераторе есть обратная связь.</p>
+						<a
+							href="https://studfile.net/preview/6826363/page:54/"
+							target="_blank"
+							>ссылка на материал</a
+						>
+					</div>
 				</div>
 				<br />
 			</div>
@@ -926,30 +1147,34 @@
 				/>
 				<div class="solve">
 					<span class="title">Ответ: </span>
-					<p>
-						На данной схеме изображен LC-автогенератор с индуктивной
-						трансформаторной обратной связью.
-					</p>
-					<p>
-						При помощи обратной связи достигается условие баланса фаз (так как
-						каждая катушка поворачивает на 90 градусов сигнал).
-					</p>
+					<div class="container">
+						<p>
+							На данной схеме изображен LC-автогенератор с индуктивной
+							трансформаторной обратной связью.
+						</p>
+						<p>
+							При помощи обратной связи достигается условие баланса фаз (так как
+							каждая катушка поворачивает на 90 градусов сигнал).
+						</p>
 
-					<p>
-						А так схема состоит из трех составляющих:
-						<br /><span>1. усилительный каскад - VT, R1, R2, Rэ и r;</span
-						><br /><span>2. обратная связь</span><br /><span>3. LC - цепь</span>
-					</p>
-					<p>
-						В LC-цепи возникают гармонические колебания которые через обратную
-						связь сообщаются усилительному каскаду, который усиливает его
-					</p>
-					<a
-						href="https://studfile.net/preview/9787120/page:18/"
-						target="_blank"
-					>
-						ссылка на материал</a
-					>
+						<p>
+							А так схема состоит из трех составляющих:
+							<br /><span>1. усилительный каскад - VT, R1, R2, Rэ и r;</span
+							><br /><span>2. обратная связь</span><br /><span
+								>3. LC - цепь</span
+							>
+						</p>
+						<p>
+							В LC-цепи возникают гармонические колебания которые через обратную
+							связь сообщаются усилительному каскаду, который усиливает его
+						</p>
+						<a
+							href="https://studfile.net/preview/9787120/page:18/"
+							target="_blank"
+						>
+							ссылка на материал</a
+						>
+					</div>
 				</div>
 			</div>
 		</section>
